[project]
name = "pytxi"
packages = ["pytxi"]
description = "We want tximport in Python too!"
authors = [
    "Simon van Heeringen <simon.vanheeringen@gmail.com>"]
license = "MIT"
url = "https://github.com/vanheeringen-lab/pytxi"

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"]

install_requires = ["genomepy"]
python_requires = ">3.6"

[metadata]
license_files = "LICENSE"

[build-system]
requires = ["setuptools==59.4.0", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80

[mypy]
ignore_missing_imports = true
